# eo-toolbox

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  pyproject.toml  zensical.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml  test_coverage.yml  test_platform.yml
docs/reference/: api.md  mod_calc.md  mod_index.md  mod_mask.md  mod_save.md  mod_stac.md  mod_valid_types.md
src/eo_toolbox/: __init__.py  calc.py  index.py  mask.py  paths.py  save.py  stac.py  valid_types.py
tests/: test_calc.py  test_meta.py  test_save.py  test_valid_types.py
