[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.8.9,<0.9" ]

[project]
name = "eo-toolbox"
version = "0.0.1"
description = "A Toolbox to work with Earth Observation Data"
readme = "README.md"
authors = [ { name = "npikall", email = "nikolas.pikall@tuwien.ac.at" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy>=2.3.2",
  "odc-stac>=0.4",
  "pydantic>=2.11.7",
  "pystac-client>=0.9",
  "rioxarray>=0.19",
  "xarray>=2025.7.1",
]

[dependency-groups]
dev = [ "pre-commit", "pytest", "pytest-cov", "ruff", "ty" ]
docs = [ "mkdocstrings-python>=2.0.1", "zensical>=0.0.11" ]

[tool.ruff]
line-length = 79
exclude = [ "tests" ]
format.line-ending = "auto"
format.docstring-code-line-length = 79
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401", # Any type in func args are not allowed
  "COM812", # missing trailing comma is disabled
  "D203",   # no blank lines between class def and docstring
  "D213",   # multiline summary should start in first line
  "PGH",    # pygrep hooks are ignored
  "T201",   # allow print statements
  "TD002",  # todo author assignment is ignored
  "TD003",  # todo issue assignment is ignored
]

lint.fixable = [ "ALL" ]
